# please

./: .gitignore  CMakeLists.txt  README.md  please.sln  please.vcxproj  please.vcxproj.filters
resources/: macos.icns
source/: icon_file.rc  main.cpp
source/please/: terminalManager.cpp  terminalManager.h
source/please/data_access/: models.h
source/please/exceptions/: exceptions.cpp  exceptions.h
source/please/logic/: inputLogic.cpp  inputLogic.h  pathLogic.cpp  pathLogic.h  terminalLogic.cpp  terminalLogic.h
